jsonrpc/tests/snapshots/main__client-2.snap
---
source: jsonrpc/tests/main.rs
expression: "client.request::<_, i64,\n        ()>(build_request!({\n                \"jsonrpc\" : \"2.0\", \"method\" : \"subtract\", \"params\" : [42, 23],\n                \"id\" : 1\n            })).await"
---
Ok(
    Response {
        jsonrpc: "2.0",
        result: Result(
            19,
        ),
        id: Some(
            1,
        ),
    },
)
