jsonrpc/tests/snapshots/main__client-3.snap
---
source: jsonrpc/tests/main.rs
expression: "client.request::<_, i64,\n        ()>(build_request!({\n                \"jsonrpc\" : \"2.0\", \"method\" : \"subtract\", \"params\" : [23, 42],\n                \"id\" : 2\n            })).await"
---
Ok(
    Response {
        jsonrpc: "2.0",
        result: Result(
            -19,
        ),
        id: Some(
            2,
        ),
    },
)
