jsonrpc/tests/snapshots/main__server-4.snap
---
source: jsonrpc/tests/main.rs
expression: "client.request::<_, i64,\n        ()>(build_request!({\n                \"jsonrpc\" : \"2.0\", \"method\" : \"subtract\", \"params\" : Params\n                { subtrahend : 23, minuend : 42 }, \"id\" : 3\n            })).await"
---
Ok(
    Response {
        jsonrpc: "2.0",
        result: Result(
            19,
        ),
        id: Some(
            3,
        ),
    },
)
