jsonrpc/tests/snapshots/main__server-5.snap
---
source: jsonrpc/tests/main.rs
expression: "client.request::<_, i64,\n        ()>(build_request!({\n                \"jsonrpc\" : \"2.0\", \"method\" : \"subtract\", \"params\" : Params\n                { minuend : 42, subtrahend : 23 }, \"id\" : 4\n            })).await"
---
Ok(
    Response {
        jsonrpc: "2.0",
        result: Result(
            19,
        ),
        id: Some(
            4,
        ),
    },
)
