jsonrpc/tests/snapshots/main__server-6.snap
---
source: jsonrpc/tests/main.rs
expression: "client.request::<(), i64,\n        ()>(build_request!({\n                \"jsonrpc\" : \"2.0\", \"method\" : \"foobar\", \"id\" : 5\n            })).await"
---
Ok(
    Response {
        jsonrpc: "2.0",
        result: Error {
            code: -32601,
            message: "Method not found",
            data: None,
        },
        id: Some(
            5,
        ),
    },
)
